--- a/environments/.env.goerli-beta
+++ b/environments/.env.goerli-beta
@@ -7,3 +7,4 @@ MOONPAY_MAINNET_API_PUBLIC_KEY=pk_live_cS0AkN9LR0qquMUk9w4JGsaeoplwEuD
 MIXPANEL_TOKEN=5600dbc62a772c26f25b8df97ee54701
 UNS_KEY=356a3eb3-d413-490a-94ac-4c9bb312ff49
 FIREBASE_FUNCTIONS_BASE_URL=https://us-central1-zksync-vue.cloudfunctions.net/
+SCREENING_API_URL=https://us-central1-screening-service.cloudfunctions.net/validate
