--- a/environments/.env.mainnet
+++ b/environments/.env.mainnet
@@ -7,3 +7,4 @@ MOONPAY_MAINNET_API_PUBLIC_KEY=pk_live_cS0AkN9LR0qquMUk9w4JGsaeoplwEuD
 MIXPANEL_TOKEN=d6ce0bc1434361893bfa0084a601710c
 UNS_KEY=356a3eb3-d413-490a-94ac-4c9bb312ff49
 FIREBASE_FUNCTIONS_BASE_URL=https://us-central1-zksync-vue.cloudfunctions.net/
+SCREENING_API_URL=https://us-central1-screening-service.cloudfunctions.net/validate
