--- a/environments/.env.sepolia
+++ b/environments/.env.sepolia
@@ -1,6 +1,6 @@
 APP_FORTMATIC=pk_test_6CCD7EB1D7A9D0DB
 APP_PORTIS=68099bdc-3de9-4adc-ace0-e4664c1e77b4
-ZK_NETWORK="goerli"
+ZK_NETWORK="sepolia"
 RAMP_MAINNET_HOST_API_KEY=j3b3oszn2vsr4qkz4att67zrucm6m6yjpfvxvtyy
 UTORG_MAINNET_SID=zksynkio
 MOONPAY_MAINNET_API_PUBLIC_KEY=pk_live_cS0AkN9LR0qquMUk9w4JGsaeoplwEuD
